--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -70,7 +70,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -278,6 +277,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
+allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -493,6 +493,7 @@ allow 185.227.134.106;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
+allow 185.238.121.58;
 allow 185.241.208.115;
 allow 185.241.208.185;
 allow 185.241.208.202;
@@ -606,13 +607,6 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
-allow 193.189.100.194;
-allow 193.189.100.195;
-allow 193.189.100.196;
-allow 193.189.100.197;
-allow 193.189.100.198;
-allow 193.189.100.199;
-allow 193.189.100.200;
 allow 193.189.100.201;
 allow 193.189.100.202;
 allow 193.189.100.203;
@@ -753,7 +747,9 @@ allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
 allow 2001:67c:e28:1::103;
+allow 2001:67c:e28:1::2;
 allow 2001:67c:e28:1::3;
+allow 2001:67c:e28:1::4;
 allow 2001:67c:e60:c0c:192:42:116:173;
 allow 2001:67c:e60:c0c:192:42:116:174;
 allow 2001:67c:e60:c0c:192:42:116:175;
@@ -957,24 +953,19 @@ allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
 allow 23.191.200.12;
-allow 23.191.200.13;
 allow 23.191.200.14;
 allow 23.191.200.15;
 allow 23.191.200.16;
 allow 23.191.200.17;
-allow 23.191.200.18;
 allow 23.191.200.19;
 allow 23.191.200.2;
-allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
 allow 23.191.200.23;
 allow 23.191.200.24;
-allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
-allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -996,7 +987,6 @@ allow 2401:c080:1c02:2d4::;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
-allow 2407:1c00:6100:5640::;
 allow 2407:3640:2207:8882::1;
 allow 2407:3640:2259:6302::1;
 allow 2407:3641:2259:8208::1;
@@ -1059,7 +1049,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1294,7 +1283,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1302,6 +1290,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9b87:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1597,13 +1586,6 @@ allow 2a0f:85c1:356:5bdd::beef;
 allow 2a0f:ca80::1260:4bff:fea4:19b0;
 allow 2a0f:ca80::2e59:e5ff:fe49:3738;
 allow 2a0f:cdc6:500:11e3::2;
-allow 2a0f:df00:0:255::194;
-allow 2a0f:df00:0:255::195;
-allow 2a0f:df00:0:255::196;
-allow 2a0f:df00:0:255::197;
-allow 2a0f:df00:0:255::198;
-allow 2a0f:df00:0:255::199;
-allow 2a0f:df00:0:255::200;
 allow 2a0f:df00:0:255::201;
 allow 2a0f:df00:0:255::202;
 allow 2a0f:df00:0:255::203;
@@ -1850,7 +1832,6 @@ allow 51.38.225.46;
 allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1888,7 +1869,9 @@ allow 64.190.76.10;
 allow 64.190.76.11;
 allow 64.190.76.12;
 allow 64.190.76.13;
+allow 64.190.76.2;
 allow 64.190.76.3;
+allow 64.190.76.4;
 allow 65.87.7.22;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -2002,5 +1985,4 @@ allow 95.143.193.125;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 95.216.107.148;
-allow 97.74.89.52;
 allow 98.128.173.33;
